# JPEGer

./: .gitignore  APP0.cpp  BMP.cpp  ByteStream.cpp  ByteStream.hpp  ByteStream.tpp  CMakeLists.txt  COM.cpp  COM.hpp  Common.cpp  DHT.cpp  DHT.hpp  DQT.cpp  DQT.hpp  Decoder.cpp  Decoder.hpp  Encoder.cpp  HuffmanTree.cpp  HuffmanTree.hpp  Image.cpp  Image.hpp  MCU.cpp  MCU.hpp  MCU_AVX.cpp  MCU_SSE.cpp  MCU_Threads.cpp  Marker.hpp  QuantizationTable.cpp  QuantizationTable.hpp  README.md  SOF0.cpp  SOS.cpp  SOS.hpp  build.sh  compile_flags.txt  cpu_features.cpp  gdb.sh  main.cpp  test.sh
.github/workflows/: c-cpp.yml
aarch64/: MCU_NEON.S  MCU_NEON.cpp
include/: APP0.hpp  BMP.hpp  ByteStream.hpp  COM.hpp  Common.hpp  Common.tpp  DHT.hpp  DQT.hpp  Decoder.hpp  Encoder.hpp  HuffmanTree.hpp  Image.hpp  MCU.hpp  Marker.hpp  SOF0.hpp  SOS.hpp  Type.hpp  cpu_features.hpp
test/: load.sh
x86/: MCU_AVX.cpp  MCU_SSE.cpp
